Udpate install sh
